[package]
name = "quoridor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arraydeque = "0.5"
log = "0.4"
ahash = "0.8"
rand = {version="0.8", features = ["small_rng"]}
bincode = "1.3"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
bitvec = "1"
tokio = "1"
sysinfo = "0.30"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

